# MakanCodex

./: .flake8  Makefile  Pipfile  README.md  monkeytype.sqlite3  mypy.ini  pyproject.toml  requirements.txt
docs/: conf.py
src/makan_codex/: cli.py  database.py  recipe_handler.py  utils.py
src/makan_codex/scrapers/: __init__.py  all_recipes_com_scaper.py  base.py
src/pycook/: cli.py  recipe_handler.py  utils.py
src/recipe_cookbook/: cli.py
src/recipe_crypt/: cli.py  recipe_handler.py  utils.py
tests/: conftest.py  test_cli.py  test_database.py
